[project]
name = "ai-prompt-procesor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "azure-ai-textanalytics>=5.3.0",
    "promptflow-azure-ai-language>=0.1.14",
    "promptflow-azure>=1.17.2",
    "llmlingua-promptflow>=0.0.1",
]
